[package]
name = "common"
version = "0.1.0"
authors = ["KaoImin <kaoimin@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive_more = "0.99"
ckb-types = "0.42"
num-bigint = "0.4"
bech32 = "0.6.0"
ckb-hash = "=0.43.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
secp256k1 = { version = "0.19", features = ["recovery"] }

[dev-dependencies]
rand = "0.8"
