[package]
name = "common"
version = "0.2.7"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
blake2b-rs = "0.2"
bech32 = "0.8"
ckb-hash = "0.101"
creep = "0.3"
ckb-types = "0.101"
derive_more = "0.99"
hex = "0.4"
minstant = { git = "https://github.com/tikv/minstant.git", branch = "master" }
num-bigint = "0.4"
secp256k1 = { version = "0.21", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.8"
rust-crypto = "0.2"
