[package]
name = "protocol"
version = "0.4.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "0.105"
ckb-jsonrpc-types = "0.104"
serde = { version = "1.0", features = ["derive"] }

common = { path = "../common" }
