[package]
name = "tracing"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.4"
lazy_static = "1.4"
minitrace = { git = "https://github.com/tikv/minitrace-rust.git" }
minitrace-jaeger = { git = "https://github.com/tikv/minitrace-rust.git" }
minitrace-macro = { git = "https://github.com/tikv/minitrace-rust.git" }
tokio = { version = "1.13", features = ["rt", "sync"] }
