[package]
name = "core-ckb-client"
version = "0.2.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.101"
ckb-types = "0.101"
jsonrpc-core = "18.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread", "sync"] }

common = { path = "../../common" }
common-logger = { path = "../../logger" }
core-storage = { path = "../storage" }
core-synchronization = { path = "../synchronization"}
