[package]
name = "core-cli"
version = "0.1.0"
authors = ["KaoImin <kaoimin@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
ckb-types = "0.43"
ckb-jsonrpc-types = "0.43"
clap = "2.33"
fs_extra = "1.2"
log = "0.4"
log4rs = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

common = { path = "../../common" }
core-extensions = { path = "../extensions" }
core-service = { path = "../service" }

[dev-dependencies]
rand = "0.8"
