[package]
name = "core-cli"
version = "0.4.4"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
ckb-types = "0.106"
ckb-jsonrpc-types = "0.104"
clap = "2.34"
log = "0.4"
log4rs = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["time"] }
toml = "0.5"

common = { path = "../../common" }
common-logger = { path = "../../logger" }
core-service = { path = "../service" }

[dev-dependencies]
rand = "0.8"
