[package]
name = "extensions"
version = "0.1.0"
authors = ["KaoImin <kaoimin@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
# ckb-indexer = { git = "https://github.com/nervosnetwork/ckb-indexer", rev = "d247556" }
ckb-indexer = { git = "https://github.com/KaoImin/ckb-indexer", branch = "mercury" }
ckb-jsonrpc-types = "0.42"
# ckb-sdk = { git = "https://github.com/KaoImin/ckb-cli", branch = "mercury" }
ckb-sdk = "0.42"
ckb-types = "0.42"
hex = "0.4"
lazy_static = "1.4"
molecule = "=0.6.0"
num-bigint = "0.4"   
num-traits = "0.2"
parking_lot = "0.11"
rlp = "0.4"
serde = { version = "1.0", features = ["derive"] }

common = { path = "../../common" }
storage = { path = "../storage" }

[dev-dependencies]
ckb-chain-spec = "0.42"
rand = "0.7"
smallvec = "1.6"
