[package]
name = "core-extensions"
version = "0.2.0-beta.3"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
# ckb-indexer = { git = "https://github.com/KaoImin/ckb-indexer", branch = "mercury" }
ckb-jsonrpc-types = "0.101"
ckb-types = "0.101"
hex = "0.4"
lazy_static = "1.4"
molecule = "0.7"
num-bigint = "0.4"   
num-traits = "0.2"
parking_lot = "0.11"
rlp = "0.4"
serde = { version = "1.0", features = ["derive"] }

common = { path = "../../common" }
core-storage = { path = "../storage" }

[dev-dependencies]
ckb-chain-spec = "0.101"
rand = "0.8"
smallvec = "1.6"
