[package]
name = "inspection"
version = "0.2.0-beta.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.43"
ckb-types = "0.43"
hex = "0.4"
log = "0.4"
tokio = { version = "1.11", features = ["macros", "rt-multi-thread", "sync"] }

common = { path = "../../common" }
core-storage = { path = "../storage" }
db_xsql = { path = "../../db/xsql", package = "xsql" }
