[package]
name = "core-rpc"
version = "0.1.0"
authors = ["KaoImin <kaoimin@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bincode = "1.3"
# ckb-indexer = { git = "https://github.com/nervosnetwork/ckb-indexer", rev = "d247556" }
ckb-indexer = { git = "https://github.com/KaoImin/ckb-indexer", branch = "mercury" }
ckb-jsonrpc-types = "0.42"
ckb-sdk = "0.42"
ckb-types = "0.42"
dashmap = "4.0"
hex = "0.4"
jsonrpc-core = "17.0"
jsonrpc-derive = "17.0"
lazy_static = "1.4"
log = "0.4"
num-bigint = "0.4"   
num-traits = "0.2" 
parking_lot = "0.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread", "time"] }

common = { path = "../../common" }
core-storage = { path = "../storage" }
core-extensions = { path = "../extensions" }

[dev-dependencies]
rand = "0.7"
smallvec = "1.6"

core-cli = { path = "../cli" }
