[package]
name = "core-rpc"
version = "0.2.0-beta.3"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5"
async-trait = "0.1"
bincode = "1.3"
clap = "2.33"
# ckb-indexer = { git = "https://github.com/KaoImin/ckb-indexer", branch = "mercury" }
ckb-jsonrpc-types = "0.101"
ckb-types = "0.101"
ckb-dao-utils = "0.101"
crossbeam-channel = "0.5"
dashmap = "4.0"
hex = "0.4"
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
lazysort =  "0.2"
lazy_static = "1.4"
log = "0.4"
minstant = { git = "https://github.com/tikv/minstant.git", branch = "master" }
num-bigint = "0.4"   
num-traits = "0.2" 
parking_lot = "0.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14", features = ["macros", "rt-multi-thread", "sync"] }

jsonrpsee-http-server = "0.4"
jsonrpsee-proc-macros = "0.4"

common = { path = "../../common" }
common-logger = { path = "../../logger" }
core-storage = { path = "../storage" }
core-synchronization = { path = "../synchronization"}
protocol = { path = "../../db/protocol" }

[dev-dependencies]
env_logger = "0.9"
rand = "0.8"
rbatis = { version = "3.0", default-features = false,  features = ["all-database", "runtime-tokio-native-tls", "upper_case_sql_keyword"] }
smallvec = "1.6"

core-cli = { path = "../cli" }
xsql = { path = "../../db/xsql" }
