[package]
name = "core-service"
version = "0.2.0-beta.1"
authors = ["KaoImin <kaoimin@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ckb-indexer = { git = "https://github.com/KaoImin/ckb-indexer", branch = "mercury" }
ckb-jsonrpc-types = "0.43"
ckb-types = "0.43"
jsonrpsee-http-server = { git = "https://github.com/paritytech/jsonrpsee", rev = "b16568b" }
jsonrpsee-proc-macros = { git = "https://github.com/paritytech/jsonrpsee", rev = "b16568b" }
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.11"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread", "time"] }

common = { path = "../../common" }
core-extensions = { path = "../extensions" }
core-rpc = { path = "../rpc" }
core-storage = { path = "../storage" }
core-synchronization = { path = "../synchronization" }

[dev-dependencies]
rand = "0.7"
