[package]
name = "core-service"
version = "0.2.0-beta.2"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ckb-indexer = { git = "https://github.com/KaoImin/ckb-indexer", branch = "mercury" }
ckb-jsonrpc-types = "0.101"
ckb-types = "0.101"
jsonrpsee-http-server = "0.4"
jsonrpsee-proc-macros = "0.4"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.11"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread", "time"] }

common = { path = "../../common" }
core-extensions = { path = "../extensions" }
core-rpc = { path = "../rpc" }
core-storage = { path = "../storage" }
core-synchronization = { path = "../synchronization" }

[dev-dependencies]
rand = "0.7"
