[package]
name = "core-service"
version = "0.4.4"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.108"
ckb-types = "0.104"
jsonrpsee-http-server = "0.15"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

common = { path = "../../common" }
core-ckb-client = { path = "../ckb-client" }
core-rpc = { path = "../rpc/core" }
core-rpc-types = { path = "../rpc/types" }
core-storage = { path = "../storage" }
core-synchronization = { path = "../synchronization" }

[dev-dependencies]
rand = "0.8"
