[package]
name = "core-storage"
version = "0.3.0"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson2 = "2.0"
# ckb-indexer = { git = "https://github.com/KaoImin/ckb-indexer", branch = "mercury" }
ckb-types = "0.101"
ckb-jsonrpc-types = "0.101"
clap = "2.34"
dashmap = "4.0"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
rbatis = { version = "3.0", default-features = false,  features = ["all-database", "runtime-tokio-native-tls", "upper_case_sql_keyword"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }

common = { path = "../../common" }
common-logger = { path = "../../logger" }
db-rocksdb = { path = "../../db/rocksdb", package = "rocksdb" }
db-xsql = { path = "../../db/xsql", package = "xsql" }
protocol = { path = "../../protocol" }

[dev-dependencies]
arc-swap = "1.5"
criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
env_logger = "0.9"
rand = "0.7"
xsql-test = { path = "../../db/xsql-test" }

[[bench]]
name = "snowflake_bench"
harness = false

[lib]
doctest = false
