[package]
name = "core-storage"
version = "0.4.4"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "0.107"
ckb-jsonrpc-types = "0.104"
clap = "2.34"
dashmap = "5.3"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
seq-macro = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sql-builder = "3.1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "any", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }

common = { path = "../../common" }
core-rpc-types = { path = "../../core/rpc/types" }
db-sqlx = { path = "../../db/db-sqlx", package = "db-sqlx" }
protocol = { path = "../../protocol" }

[dev-dependencies]
arc-swap = "1.5"
criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
env_logger = "0.9"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "any", "sqlite"] }
xsql-test = { path = "../../db/xsql-test" }

[[bench]]
name = "snowflake_bench"
harness = false

[lib]
doctest = false
