[package]
name = "core-synchronization"
version = "0.4.1"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "0.101"
futures = "0.3"
hex = "0.4"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
rbatis = { version = "3.0", default-features = false,  features = ["all-database", "runtime-tokio-native-tls", "upper_case_sql_keyword"] }
rbson = "2.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

common = { path = "../../common" }
core-rpc-types = { path = "../rpc/types" }
core-storage = { path = "../storage" }
db-sqlx = { path = "../../db/db-sqlx", package = "db-sqlx" }
db_xsql = { path = "../../db/xsql", package = "xsql" }

[dev-dependencies]
env_logger = "0.9"
rand = "0.7"
xsql-test = { path = "../../db/xsql-test" }
