[package]
name = "db-protocol"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.101"
ckb-types = "0.101"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

common = { path = "../../common" }
