[package]
name = "db-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures = "0.3"
once_cell = "1.10"
sql-builder = "3.1"
sqlx = { git = "https://github.com/EthanYuan/sqlx.git", branch = "v0_5_9_any_support_i16", features = ["runtime-tokio-native-tls", "any", "postgres"] }
tokio = { version = "1", features = ["full"] }

common = { path = "../../common" }
protocol = { path = "../../protocol" }
