[package]
name = "db-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "0.101"
log = "0.4"
futures = "0.3"
hex = "0.4"
once_cell = "1.10"
sql-builder = "3.1"
sqlx = { version = "0.6.0", features = ["runtime-tokio-native-tls", "any", "postgres"] }
sqlx-core = { version = "0.6.0"}
tokio = { version = "1", features = ["full"] }

common = { path = "../../common" }
protocol = { path = "../../protocol" }
