[package]
name = "postgres"
version = "0.1.0"
authors = ["KaoImin <kaoimin@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
ckb-jsonrpc-types = "0.43"
ckb-types = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["all", "migrate", "runtime-tokio-native-tls"] }

common = { path = "../../common" }
db_protocol = { path = "../protocol", package = "protocol" }
