[package]
name = "protocol"
version = "0.1.0"
authors = ["KaoImin <kaoimin@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.43"
ckb-types = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

common = { path = "../../common" }
