[package]
name = "rocksdb"
version = "0.1.0"
authors = ["KaoImin <kaoimin@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { package = "ckb-rocksdb", version = "0.16" }

common = { path = "../../common" }
db_protocol = { path = "../protocol", package = "protocol" }

[dev-dependencies]
tempfile = "3.0"
