[package]
name = "xsql-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.43"
rbatis = { git = "https://github.com/KaoImin/rbatis.git", branch = "bson", features = ["all-database", "debug_mode", "tokio1"] }
serde_json = "1.0"

common = { path = "../../common" }
protocol = { path = "../protocol" }
xsql = { path = "../xsql" }
