[package]
name = "xsql-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.101"
rbatis = { version = "3.0", default-features = false,  features = ["all-database", "runtime-tokio-native-tls"] }
serde_json = "1.0"

common = { path = "../../common" }
protocol = { path = "../protocol" }
xsql = { path = "../xsql" }
