[package]
name = "xsql-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.104"
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "any", "sqlite"] }

common = { path = "../../common" }
