[package]
name = "xsql"
version = "0.1.0"
authors = ["KaoImin <kaoimin@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.43"
ckb-types = "0.43"
clap = "2.33"
hex = "0.4"
log = "0.4"
rbatis = { version = "2.0", features = ["all-database", "debug_mode", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rs-snowflake = "0.5"

common = { path = "../../common" }
db_protocol = { path = "../protocol", package = "protocol" }

[dev-dependencies]
tokio = { version = "1.9", features = ["full"] }

[features]
postgres = ["rbatis/postgres"]
