[package]
name = "xsql"
version = "0.1.0"
authors = ["KaoImin <kaoimin@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
bson = { version = "1.2", features = ["u2i"] }
ckb-jsonrpc-types = "0.43"
ckb-types = "0.43"
is_sorted = "0.1"
log = "0.4"
rbatis = { git = "https://github.com/KaoImin/rbatis.git", branch = "bson", features = ["all-database", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }

common = { path = "../../common" }
db_protocol = { path = "../protocol", package = "protocol" }

[dev-dependencies]
arc-swap = "1.3"
criterion = { version = "0.3", features = ["async_tokio"] }
env_logger = "0.9"
rand = "0.7"
