[package]
name = "xsql"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
ckb-jsonrpc-types = "0.101"
ckb-types = "0.101"
is_sorted = "0.1"
log = "0.4"
rbatis = { version = "3.0", features = ["all-database", "runtime-tokio-native-tls", "upper_case_sql_keyword"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

common = { path = "../../common" }
db_protocol = { path = "../protocol", package = "protocol" }

[dev-dependencies]
arc-swap = "1.4"
criterion = { version = "0.3", features = ["async_tokio"] }
env_logger = "0.9"
rand = "0.7"
