[package]
name = "core-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.4"
clap = "2.33"
# ckb-indexer = { git = "https://github.com/KaoImin/ckb-indexer", branch = "mercury" }
ckb-jsonrpc-types = "0.101"
ckb-types = "0.101"
ckb-dao-utils = "0.101"
crossbeam-channel = "0.5"
dashmap = "4.0"
hex = "0.4"
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
jsonrpsee-http-server = "0.4"
jsonrpsee-proc-macros = "0.4"
lazy_static = "1.4"
log = "0.4"
num-bigint = "0.4"   
num-traits = "0.2" 
parking_lot = "0.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread", "sync"] }

common = { path = "../../../common" }
common-logger = { path = "../../../logger" }
core-ckb-client = { path = "../../ckb-client" }
core-rpc-types = { path = "../types" }
core-storage = { path = "../../storage" }

[dev-dependencies]
env_logger = "0.9"
rand = "0.7"
rbatis = { version = "3.0", default-features = false,  features = ["all-database", "runtime-tokio-native-tls", "upper_case_sql_keyword"] }

core-cli = { path = "../../cli" }
xsql = { path = "../../../db/xsql" }
