[package]
name = "core-rpc"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.4"
clap = "2.34"
ckb-jsonrpc-types = "0.104"
ckb-types = "0.104"
ckb-dao-utils = "0.104"
crossbeam-channel = "0.5"
hex = "0.4"
jsonrpsee = { version = "0.15", features = ["full"] } 
jsonrpsee-core = "0.15"
jsonrpsee-proc-macros = "0.15"
lazy_static = "1.4"
log = "0.4"
num-bigint = "0.4"   
num-traits = "0.2" 
parking_lot = "0.12"
pprof = { version = "0.6", features = ["flamegraph", "cpp"]}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

common = { path = "../../../common" }
core-ckb-client = { path = "../../ckb-client" }
core-rpc-types = { path = "../types" }
core-storage = { path = "../../storage" }

[dev-dependencies]
env_logger = "0.9"
rand = "0.8"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "any", "sqlite"] }

core-cli = { path = "../../cli" }
db-sqlx = { path = "../../../db/db-sqlx" , package = "db-sqlx"}
xsql-test = { path = "../../../db/xsql-test" }

